// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: HTML logic -> should render a form section with a button label of \`Go\` 1`] = `
<amplify-form-section button-label="Go">
  <!---->
  <amplify-section class="amplify-ui--form-section css-1u8jjs9">
    <form>
      <slot-fb name="amplify-form-section-header">
        <amplify-section-header>
          Create a new account
        </amplify-section-header>
      </slot-fb>
      <slot-fb name="amplify-form-section-body">
        <amplify-form-field label="Email Address *" placeholder="email@example.com" type="email"></amplify-form-field>
        <amplify-form-field label="Phone Number *" placeholder="555-555-5555" type="tel"></amplify-form-field>
        <amplify-form-field label="Password *" placeholder="Create a password" type="password"></amplify-form-field>
      </slot-fb>
      <slot-fb name="amplify-form-section-footer">
        <amplify-button class="amplify-ui--footer-section css-gw3w6p" type="submit">
          Go
        </amplify-button>
      </slot-fb>
    </form>
  </amplify-section>
</amplify-form-section>
`;

exports[`amplify-form-section spec: HTML logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <!---->
  <amplify-section class="amplify-ui--form-section css-1u8jjs9">
    <form>
      <slot-fb name="amplify-form-section-header">
        <amplify-section-header>
          Create a new account
        </amplify-section-header>
      </slot-fb>
      <slot-fb name="amplify-form-section-body">
        <amplify-form-field label="Email Address *" placeholder="email@example.com" type="email"></amplify-form-field>
        <amplify-form-field label="Phone Number *" placeholder="555-555-5555" type="tel"></amplify-form-field>
        <amplify-form-field label="Password *" placeholder="Create a password" type="password"></amplify-form-field>
      </slot-fb>
      <slot-fb name="amplify-form-section-footer">
        <amplify-button class="amplify-ui--footer-section css-gw3w6p" type="submit">
          Submit
        </amplify-button>
      </slot-fb>
    </form>
  </amplify-section>
</amplify-form-section>
`;

exports[`amplify-form-section spec: HTML logic -> should render a form section with only a class of \`amplify-ui--form-section\` when style override is true 1`] = `
<amplify-form-section override-style="true">
  <!---->
  <amplify-section class="amplify-ui--form-section">
    <form>
      <slot-fb name="amplify-form-section-header">
        <amplify-section-header>
          Create a new account
        </amplify-section-header>
      </slot-fb>
      <slot-fb name="amplify-form-section-body">
        <amplify-form-field label="Email Address *" placeholder="email@example.com" type="email"></amplify-form-field>
        <amplify-form-field label="Phone Number *" placeholder="555-555-5555" type="tel"></amplify-form-field>
        <amplify-form-field label="Password *" placeholder="Create a password" type="password"></amplify-form-field>
      </slot-fb>
      <slot-fb name="amplify-form-section-footer">
        <amplify-button class="amplify-ui--footer-section" type="submit">
          Submit
        </amplify-button>
      </slot-fb>
    </form>
  </amplify-section>
</amplify-form-section>
`;
